@@ -1,3 +1,10 @@
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[uninstall] Fix bug: Make sure everything is properly deleted.
+
+	* autogen.sh: Import uninstall-sofixed.
+	* Makefile.am (EXTRA_DIST): Add build-aux/uninstall-sofixed.
+
 2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[doc] Use U+2018, U+2019 in example.
